--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,6 +2,10 @@
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
+
+    @media screen and (min-width:480px) {
+                
+    }
 }
 
 .hero__title {
