--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -21,6 +21,14 @@ body {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and (min-width: 768px) {
+        min-width: 768px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        min-width: 1200px;
+    }
 }
 
 h2,
