--- a/sass/components/_examples.scss
+++ b/sass/components/_examples.scss
@@ -1,3 +1,9 @@
+.section--examples {
+    @media screen and (max-width: 480px) {
+            display: none;
+        }
+}
+
 .examples {
     display: flex;
 }
