--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -5,6 +5,10 @@
 
 .features {
     display: flex;
+
+    @media screen and (max-width: 480px) {
+            display: block;
+        }
 }
 
 .features__name {
@@ -17,6 +21,10 @@
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+
+    @media screen and (max-width: 480px) {
+            text-align: center;
+        }
 }
 
 .features__text {
@@ -32,6 +40,10 @@
     width: 270px;
     margin: 15px;
     border-radius: 4px;
+
+    @media screen and (min-width:480px) {
+        width: 450px;
+    }
 }
 
 .features__icon {
@@ -43,4 +55,8 @@
     margin-bottom: 30px;
 
     background-color: $secondary-bgc-color;
+
+    @media screen and (min-width:480px) {
+            width: 450px;
+        }
 }
