--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,8 +3,9 @@
     padding-top: 200px;
     padding-bottom: 200px;
 
-    @media screen and (min-width:480px) {
-                
+    @media screen and (max-width: 480px) {
+        padding-top: 118px;
+        padding-bottom: 118px;        
     }
 }
 
@@ -19,6 +20,11 @@
     line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+
+    @media screen and (max-width: 480px) {
+            font-size: 26px;
+            line-height: 1.62;
+        }
 }
 
 .hero__button {
@@ -42,4 +48,9 @@
     background-color: #C4C4C4;
     background-repeat: no-repeat;
     background-position: center;
+
+    @media screen and (max-width: 480px) {
+            width: 480px;
+            height: 400px;
+        }
 }
