--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,4 +7,9 @@
     line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
+
+    @media screen and (max-width: 480px) {
+            font-size: 24px;
+            line-height: 1.17;
+        }
 }
