--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,47 @@ body {
   letter-spacing: 0.03em;
 }
 
+@media screen and (min-width: 480px) {
+  body {
+    min-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    min-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  body {
+    min-width: 1200px;
+  }
+}
+
 .container {
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    min-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    min-width: 1200px;
+  }
 }
 
 h2,
@@ -90,6 +125,13 @@ ul {
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-decoration: none;
+}
+
+@media screen and (max-width: 480px) {
+  .page-header__logo {
+    font-size: 24px;
+    line-height: 1.17;
+  }
 }
 
 .site-nav {
@@ -197,6 +239,13 @@ ul {
   padding-bottom: 200px;
 }
 
+@media screen and (max-width: 480px) {
+  .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
+
 .hero__title {
   margin-top: 0;
   margin-bottom: 30px;
@@ -206,6 +255,13 @@ ul {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 480px) {
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.62;
+  }
 }
 
 .hero__button {
@@ -225,6 +281,13 @@ ul {
   background-color: #C4C4C4;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+@media screen and (max-width: 480px) {
+  .overlay {
+    width: 480px;
+    height: 400px;
+  }
 }
 
 .backdrop {
@@ -511,6 +574,12 @@ ul {
   display: flex;
 }
 
+@media screen and (max-width: 480px) {
+  .features {
+    display: block;
+  }
+}
+
 .features__name {
   margin-top: 0;
   margin-bottom: 10px;
@@ -519,6 +588,12 @@ ul {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 480px) {
+  .features__name {
+    text-align: center;
+  }
 }
 
 .features__text {
@@ -532,6 +607,12 @@ ul {
   width: 270px;
   margin: 15px;
   border-radius: 4px;
+}
+
+@media screen and (min-width: 480px) {
+  .features__item {
+    width: 450px;
+  }
 }
 
 .features__icon {
@@ -549,6 +630,18 @@ ul {
   border-radius: 4px;
   margin-bottom: 30px;
   background-color: #F5F4FA;
+}
+
+@media screen and (min-width: 480px) {
+  .features__icon {
+    width: 450px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .section--examples {
+    display: none;
+  }
 }
 
 .examples {
@@ -608,6 +701,12 @@ ul {
   display: flex;
 }
 
+@media screen and (max-width: 480px) {
+  .command {
+    display: block;
+  }
+}
+
 .command__item {
   margin-left: 30px;
   -webkit-box-sizing: border-box;
@@ -620,6 +719,12 @@ ul {
 
 .command__item:first-child {
   margin-left: 0;
+}
+
+@media screen and (max-width: 480px) {
+  .command__item {
+    width: 450px;
+  }
 }
 
 .team {
