--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -28,7 +28,7 @@ body {
 }
 
 .container {
-    // width: 1200px;
+    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
@@ -38,12 +38,12 @@ body {
             width: 480px;
         }
 
-    @media screen and (min-width: 768px) {
-        min-width: 768px;
+    @media screen and (max-width: 768px) {
+        width: 768px;
     }
 
-    @media screen and (min-width: 1200px) {
-        min-width: 1200px;
+    @media screen and (max-width: 1200px) {
+        width: 1200px;
     }
 }
 
