--- a/sass/components/_examples.scss
+++ b/sass/components/_examples.scss
@@ -2,6 +2,9 @@
     @media screen and (max-width: 480px) {
             display: none;
         }
+    @media screen and (max-width: 768px) {
+            display: none;
+        }
 }
 
 .examples {
