--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -24,8 +24,14 @@
             margin-left: 0;
         }
 
-    @media screen and (max-width:480px) {
+    @media screen and (max-width: 480px) {
             width: 450px;
+            margin-left: 0;
+            margin-top: 30px;
+        }
+    @media screen and (max-width: 768px) {
+            width: 354px;
+            margin-top: 30px;
         }
 }
 
