--- a/css/main.css
+++ b/css/main.css
@@ -5,45 +5,26 @@ body {
   letter-spacing: 0.03em;
 }
 
-@media screen and (min-width: 480px) {
-  body {
-    min-width: 480px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  body {
-    min-width: 768px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  body {
-    min-width: 1200px;
-  }
-}
-
 .container {
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .container {
     width: 768px;
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
   }
@@ -83,8 +64,27 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 94px;
-  padding-bottom: 94px;
+}
+
+@media screen and (min-width: 480px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .section__title {
@@ -95,6 +95,14 @@ ul {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+}
+
+@media screen and (min-width: 480px) {
+  .section__title {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.17;
+  }
 }
 
 .section__title--none {
@@ -572,19 +580,30 @@ ul {
 }
 
 .section--features {
-  padding-bottom: 0;
-  padding-top: 94px;
+  padding-bottom: 30px;
 }
 
 .features {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 768px) {
   .features {
-    display: block;
+    width: 768px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features {
+    width: 1200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
@@ -612,7 +631,6 @@ ul {
 }
 
 .features__item {
-  width: 270px;
   margin: 15px;
   border-radius: 4px;
 }
@@ -620,6 +638,7 @@ ul {
 @media screen and (min-width: 480px) {
   .features__item {
     width: 450px;
+    padding-bottom: 30px;
   }
 }
 
@@ -645,7 +664,6 @@ ul {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 270px;
   height: 120px;
   border-radius: 4px;
   margin-bottom: 30px;
@@ -670,15 +688,15 @@ ul {
   }
 }
 
-@media screen and (max-width: 480px) {
-  .section--examples {
-    display: none;
-  }
+.section--examples {
+  display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 1200px) {
   .section--examples {
-    display: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
@@ -739,9 +757,19 @@ ul {
   display: flex;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .command {
     display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .command {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 }
 
@@ -755,22 +783,21 @@ ul {
   background-color: #ffffff;
 }
 
-.command__item:first-child {
-  margin-left: 0;
-}
-
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .command__item {
-    width: 450px;
-    margin-left: 0;
-    margin-top: 30px;
+    margin-bottom: 30px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .command__item {
-    width: 354px;
-    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .command__item:first-child {
+    margin-left: 0;
   }
 }
 
@@ -845,17 +872,62 @@ ul {
   display: flex;
 }
 
+@media screen and (min-width: 480px) {
+  .clients {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 798px) {
+  .clients {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .clients__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   cursor: pointer;
   fill: #AFB1B8;
-  margin-left: 30px;
 }
 
-.clients__item:first-child {
-  margin-left: 0;
+@media screen and (min-width: 480px) {
+  .clients__item {
+    margin-bottom: 30px;
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 798px) {
+  .clients__item {
+    margin-bottom: 30px;
+    margin-left: 30px;
+  }
+  .clients__item:first-child {
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    margin-left: 30px;
+  }
+  .clients__item:first-child {
+    margin-left: 0;
+  }
 }
 
 .clients__link {
@@ -953,6 +1025,13 @@ ul {
   margin-left: 70px;
 }
 
+@media screen and (max-width: 480px) {
+  .social {
+    margin-left: 0;
+    margin-top: 60px;
+  }
+}
+
 .social__title {
   margin: 0;
   padding-top: 10px;
@@ -1009,9 +1088,9 @@ ul {
 
 .sub {
   display: inline-block;
+  margin-left: 93px;
   width: 570px;
   height: 86px;
-  margin-left: 93px;
 }
 
 .sub__group {
@@ -1086,6 +1165,12 @@ ul {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: 1px solid transparent;
+}
+
+@media screen and (max-width: 480px) {
+  .sub__button {
+    margin-top: 20px;
+  }
 }
 
 .sub__send {
