--- a/sass/components/_examples.scss
+++ b/sass/components/_examples.scss
@@ -1,9 +1,17 @@
 .section--examples {
-    @media screen and (max-width: 480px) {
-            display: none;
-        }
-    @media screen and (max-width: 768px) {
-            display: none;
+
+    display: none;
+
+    // @media screen and (min-width: 480px) {
+    //         display: none;
+    //     }
+
+    // @media screen and (min-width: 768px) {
+    //         display: none;
+    //     }
+
+    @media screen and (min-width: 1200px) {
+         display: flex;
         }
 }
 
