--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,13 +1,20 @@
 .section--features {
-    padding-bottom: 0;
-    padding-top: 94px;
+    padding-bottom: 30px;
 }
 
 .features {
-    display: flex;
+    // display: flex;
+    display: block;
 
-    @media screen and (max-width: 480px) {
-            display: block;
+    @media screen and (min-width: 768px) {
+        width: 768px;
+        display: flex;
+        flex-wrap: wrap;
+        }
+
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+        display: flex;
         }
 }
 
@@ -37,12 +44,13 @@
 }
 
 .features__item {
-    width: 270px;
+    // width: 270px;
     margin: 15px;
     border-radius: 4px;
 
     @media screen and (min-width: 480px) {
             width: 450px;
+            padding-bottom: 30px;
         }
     
     @media screen and (min-width: 768px) {
@@ -57,7 +65,7 @@
 .features__icon {
     @include centeredFlex (flex);
 
-    width: 270px;
+    // width: 270px;
     height: 120px;
     border-radius: 4px;
     margin-bottom: 30px;
