--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,5 +1,10 @@
 .container--footer {
     display: flex;
+
+    // @media screen and (max-width: 480px) {
+    //         display: block; 
+    //     }
+
 }
 
 .footer {
@@ -7,10 +12,16 @@
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: $hero-bgc-color;
+
+    // @media screen and (max-width: 480px) {
+    //     width: 480px;
+    //     height: 603px;
+    //     }
 }
 
 .footer__contacts {
     display: block;
+    
 }
 
 .footer__address {
@@ -49,6 +60,7 @@
             color: $accent-color;
             text-decoration: none;
         }
+
 }
 
 .footer__link--mail {
