--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,7 +1,22 @@
 .section {
     display: flex;
-    padding-top: 94px;
-    padding-bottom: 94px;
+    // padding-top: 94px;
+    // padding-bottom: 94px;
+
+    @media screen and (min-width: 480px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        }
+
+    @media screen and (min-width: 480px) {
+        padding-top: 60px;
+        padding-bottom: 30px;
+    }
+    
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .section__title {
@@ -13,6 +28,12 @@
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
+
+    @media screen and (min-width: 480px) {
+        margin-bottom: 30px;
+        font-size: 28px;
+        line-height: 1.17;
+        }
 }
 
 .section__title--none {
