--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -4,6 +4,11 @@
     width: 206px;
     height: 80px;
     margin-left: 70px;
+
+    @media screen and (max-width: 480px) {
+            margin-left: 0;
+            margin-top: 60px;
+        }
 }
 
 .social__title {
