--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -1,14 +1,35 @@
 .sub {
     display: inline-block;
-
+    margin-left: 93px;
 
     width: 570px;
     height: 86px;
-    margin-left: 93px;
+    
+
+    // @media screen and (min-width: 480px) {
+    //         display: block;
+    //         margin-left: 0;
+    //         text-align: center;
+    //     }
+
+    // @media screen and (min-width: 798px) {
+    //     display: block;
+    //     margin-left: 0;
+    //     text-align: center;
+    // }
+
+    // @media screen and (min-width: 1200px) {
+    //     display: inline-block;
+    //     margin-left: 93px;
+    // }
 }
 
 .sub__group {
     display: flex;
+
+    // @media screen and (max-width: 480px) {
+    //         display: block;
+    //     }
 
 }
 
@@ -26,6 +47,14 @@
     text-transform: uppercase;
 
     color: $white-color;
+
+    // @media screen and (min-width: 480px) {
+    //     margin-top: 60px;
+    //     }
+
+    // @media screen and (min-width: 1200px) {
+        
+    //     }
 }
 
 .sub__input {
@@ -46,6 +75,7 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
+
 }
 
 .sub__button {
@@ -67,6 +97,10 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: 1px solid transparent;
+
+    @media screen and (max-width: 480px) {
+            margin-top: 20px;
+        }
 }
 
 .sub__send {
