--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -5,8 +5,13 @@
 .command {
     display: flex;
 
-    @media screen and (max-width: 480px) {
-            display: block;
+    @media screen and (min-width: 480px) {
+        display: block;
+        }
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
         }
 }
 
@@ -20,19 +25,24 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
     background-color: $white-color;
 
-    &:first-child {
-            margin-left: 0;
+    // &:first-child {
+    //         margin-left: 0;
+    //     }
+
+    @media screen and (min-width: 480px) {
+        margin-bottom: 30px;
         }
 
-    @media screen and (max-width: 480px) {
-            width: 450px;
-            margin-left: 0;
-            margin-top: 30px;
+    @media screen and (min-width: 768px) {
+            margin-bottom: 30px;
         }
-    @media screen and (max-width: 768px) {
-            width: 354px;
-            margin-top: 30px;
-        }
+
+    @media screen and (min-width: 1200px) {
+
+        &:first-child {
+                margin-left: 0;
+            }
+    }
 }
 
 .team {
