--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -14,37 +14,26 @@ body {
     font-family: Roboto, sans-serif;
     letter-spacing: 0.03em;
 
-    @media screen and (min-width: 480px) {
-            min-width: 480px;
-        }
-    
-    @media screen and (min-width: 768px) {
-            min-width: 768px;
-        }
-    
-    @media screen and (min-width: 1200px) {
-            min-width: 1200px;
-        }
 }
 
 .container {
-    width: 1200px;
+    // width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 
-    @media screen and (max-width: 480px) {
-            width: 480px;
+    @media screen and (min-width: 480px) {
+        width: 480px;
         }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (min-width: 768px) {
         width: 768px;
     }
 
-    @media screen and (max-width: 1200px) {
+    @media screen and (min-width: 1200px) {
         width: 1200px;
-    }
+        }
 }
 
 h2,
