--- a/css/main.css
+++ b/css/main.css
@@ -66,17 +66,17 @@ ul {
   display: flex;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .section {
     padding-top: 60px;
     padding-bottom: 60px;
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .section {
     padding-top: 60px;
-    padding-bottom: 30px;
+    padding-bottom: 60px;
   }
 }
 
@@ -579,10 +579,6 @@ ul {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section--features {
-  padding-bottom: 30px;
-}
-
 .features {
   display: block;
 }
@@ -617,7 +613,7 @@ ul {
   text-transform: uppercase;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .features__name {
     text-align: center;
   }
@@ -638,7 +634,12 @@ ul {
 @media screen and (min-width: 480px) {
   .features__item {
     width: 450px;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
+    margin-left: 0;
+    margin-top: 0;
+  }
+  .features__item:last-child {
+    margin-bottom: 0;
   }
 }
 
@@ -646,11 +647,15 @@ ul {
   .features__item {
     width: 354px;
   }
+  .features__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .features__item {
     width: 270px;
+    padding-bottom: 0;
   }
 }
 
@@ -697,6 +702,7 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    padding-top: 0;
   }
 }
 
@@ -757,7 +763,7 @@ ul {
   display: flex;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 480px) {
   .command {
     display: block;
   }
@@ -783,7 +789,7 @@ ul {
   background-color: #ffffff;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 480px) {
   .command__item {
     margin-bottom: 30px;
   }
@@ -872,19 +878,21 @@ ul {
   display: flex;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .clients {
     display: block;
+    margin: -15px;
   }
 }
 
-@media screen and (min-width: 798px) {
+@media screen and (min-width: 768px) {
   .clients {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    margin: -10px;
   }
 }
 
@@ -893,6 +901,7 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin: -10px;
   }
 }
 
@@ -904,27 +913,21 @@ ul {
   fill: #AFB1B8;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .clients__item {
-    margin-bottom: 30px;
-    margin-left: 30px;
+    width: calc((100% / 4 * 15px) / 2);
+    margin: 15px;
   }
 }
 
-@media screen and (min-width: 798px) {
+@media screen and (min-width: 768px) {
   .clients__item {
-    margin-bottom: 30px;
-    margin-left: 30px;
-  }
-  .clients__item:first-child {
-    margin-left: 30px;
+    width: calc((100% / 3 * 15px) / 3);
+    margin: 15px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .clients__item {
-    margin-left: 30px;
-  }
   .clients__item:first-child {
     margin-left: 0;
   }
