--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,17 +1,20 @@
 .clients {
     display: flex;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (max-width: 767px) {
             display: block;
+            margin: -15px;
         }
 
-    @media screen and (min-width: 798px) {
+    @media screen and (min-width: 768px) {
         display: flex;
         flex-wrap: wrap;
+        margin: -10px;
     }
 
     @media screen and (min-width: 1200px) {
-            display: flex;
+        display: flex;
+        margin: -10px;
         }
         
 }
@@ -26,28 +29,22 @@
     //         margin-left: 0;
     //     }
 
-    @media screen and (min-width: 480px) {
-            margin-bottom: 30px;
-            margin-left: 30px;
+    @media screen and (max-width: 767px) {
+        width: calc((100% / 4 * 15px) / 2);
+        margin: 15px;
         }
 
-    @media screen and (min-width: 798px) {
-        margin-bottom: 30px;
-        margin-left: 30px;
-
-        &:first-child {
-                margin-left: 30px;
-            } 
+    @media screen and (min-width: 768px) {
+        width: calc((100% / 3 * 15px) / 3);
+        margin: 15px;
         }
 
     @media screen and (min-width: 1200px) {
-        margin-left: 30px;
 
-    &:first-child {
+        &:first-child {
             margin-left: 0;
-        }
-    };
-        
+         }
+        }   
     }    
 
 
