--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,5 +1,5 @@
 .section--features {
-    padding-bottom: 30px;
+    // padding-bottom: 30px;
 }
 
 .features {
@@ -29,7 +29,7 @@
     line-height: 1.14;
     text-transform: uppercase;
 
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 767px) {
             text-align: center;
         }
 }
@@ -50,15 +50,26 @@
 
     @media screen and (min-width: 480px) {
             width: 450px;
-            padding-bottom: 30px;
+            margin-bottom: 30px;
+            margin-left: 0;
+            margin-top: 0;
+
+        &:last-child {
+            margin-bottom: 0;
+        }    
         }
     
     @media screen and (min-width: 768px) {
             width: 354px;
+
+        &:nth-last-child(-n+2) {
+                margin-bottom: 0;
+            }
         }
     
     @media screen and (min-width: 1200px) {
             width: 270px;
+            padding-bottom: 0;
         }
 }
 
