--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -3,14 +3,14 @@
     // padding-top: 94px;
     // padding-bottom: 94px;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (max-width: 767px) {
         padding-top: 60px;
         padding-bottom: 60px;
         }
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 768px) {
         padding-top: 60px;
-        padding-bottom: 30px;
+        padding-bottom: 60px;
     }
     
     @media screen and (min-width: 1200px) {
