--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,5 +1,6 @@
 .section--features {
     // padding-bottom: 30px;
+
 }
 
 .features {
@@ -26,6 +27,43 @@
 
 }
 
+.features__item {
+    // width: 270px;
+    // margin: 15px;
+    
+    border-radius: 4px;
+
+    @media screen and (max-width: 767px) {
+        width: 450px;
+
+        margin-bottom: 30px;
+        margin-left: 15px;
+        margin-right: 15px;
+
+        &:last-child {
+                margin-bottom: 0;
+            }
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 354px;
+        margin: 15px;
+
+        &:nth-last-child(-n+2) {
+                margin-bottom: 0;
+            }
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 270px;
+        padding-bottom: 0;
+
+        &:nth-last-child(-n+2) {
+                margin-bottom: 15px;
+            }
+    }
+}
+
 .features__name {
     margin-top: 0;
     margin-bottom: 10px;
@@ -49,38 +87,6 @@
     @extend %text;
     font-size: 14px;
     line-height: 1.71;
-}
-
-.features__item {
-    // width: 270px;
-    // margin: 15px;
-    border-radius: 4px;
-
-    @media screen and (min-width: 480px) {
-            width: 450px;
-            margin-bottom: 30px;
-            margin-left: 0;
-            margin-top: 0;
-
-        &:last-child {
-            margin-bottom: 0;
-        }    
-        }
-    
-    @media screen and (min-width: 768px) {
-            width: 354px;
-            
-
-        // &:nth-last-child(-n+2) {
-        //         margin-bottom: 0;
-        //     }
-        }
-    
-    @media screen and (min-width: 1200px) {
-            width: 270px;
-            padding-bottom: 0;
-            margin: 15px;
-        }
 }
 
 .features__icon {
