--- a/css/main.css
+++ b/css/main.css
@@ -801,6 +801,12 @@ ul {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 768px;
   }
 }
@@ -939,7 +945,13 @@ ul {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin: -10px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: -15px;
   }
 }
 
@@ -948,7 +960,7 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin: -10px;
+    margin: -15px;
   }
 }
 
@@ -962,7 +974,8 @@ ul {
 
 @media screen and (max-width: 767px) {
   .clients__item {
-    width: calc((100% / 4 * 15px) / 2);
+    -ms-flex-preferred-size: calc((100% / 4 * 15px) / 2);
+        flex-basis: calc((100% / 4 * 15px) / 2);
     margin: 15px;
   }
 }
