--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -9,12 +9,14 @@
     @media screen and (min-width: 768px) {
         display: flex;
         flex-wrap: wrap;
-        margin: -10px;
+        justify-content: center;
+        align-items: center;
+        margin: -15px;
     }
 
     @media screen and (min-width: 1200px) {
         display: flex;
-        margin: -10px;
+        margin: -15px;
         }
         
 }
@@ -30,8 +32,9 @@
     //     }
 
     @media screen and (max-width: 767px) {
-        width: calc((100% / 4 * 15px) / 2);
+        flex-basis: calc((100% / 4 * 15px) / 2);
         margin: 15px;
+
         }
 
     @media screen and (min-width: 768px) {
