--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -21,6 +21,8 @@
         @media screen and (min-width: 768px) {
             display: flex;
             flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
             width: 768px;
         }
     
