--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,9 +1,18 @@
+.section--clients {
+    @media screen and (max-width: 767px) {
+        width: 480px;
+    }
+}
+
 .clients {
     display: flex;
 
     @media screen and (max-width: 767px) {
-            display: block;
-            margin: -15px;
+        width: 480px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
         }
 
     @media screen and (min-width: 768px) {
@@ -32,8 +41,15 @@
     //     }
 
     @media screen and (max-width: 767px) {
-        flex-basis: calc((100% / 4 * 15px) / 2);
         margin: 15px;
+
+        &:nth-last-child(-n+2) {
+                margin-bottom: 0;
+            }
+
+        &:nth-child(-n+2) {
+            margin-top: 0;
+        }
 
         }
 
