--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,6 +1,8 @@
 .section--features {
     // padding-bottom: 30px;
-
+    @media screen and (max-width: 767px) {
+        width: 480px;
+    }
 }
 
 .features {
