--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -3,12 +3,21 @@
 
     width: 206px;
     height: 80px;
-    margin-left: 70px;
+    
 
-    @media screen and (max-width: 480px) {
-            margin-left: 0;
-            margin-top: 60px;
-        }
+    @media screen and (max-width: 767px) {
+    width: 450px;
+    margin-left: 0;
+    margin-top: 60px;
+    }
+
+    @media screen and (min-width: 768px) {
+    margin-left: 165px;
+    }
+
+    @media screen and (min-width: 1200px) {
+    margin-left: 70px;
+    }
 }
 
 .social__title {
@@ -24,12 +33,32 @@
     text-transform: uppercase;
 
     color: $white-color;
+
+    @media screen and (max-width: 767px) {
+            text-align: center;
+        }
+
+    @media screen and (min-width: 768px) {
+        text-align: center;
+    }
+
+    @media screen and (min-width: 1200px) {
+        text-align: start;
+    }
 }
 
 .social__list {
     display: flex;
-    width: 206px;
     margin: 0;
+
+    @media screen and (max-width: 767px) {
+        width: 450px;
+        justify-content: center;
+        }
+
+    @media screen and (min-width: 1200px) {
+        width: 206px;
+    }
 }
 
 .social__item {
