--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -4,41 +4,36 @@
 
     width: 570px;
     height: 86px;
-    
 
-    // @media screen and (min-width: 480px) {
-    //         display: block;
-    //         margin-left: 0;
-    //         text-align: center;
-    //     }
-
-    // @media screen and (min-width: 798px) {
-    //     display: block;
-    //     margin-left: 0;
-    //     text-align: center;
-    // }
-
-    // @media screen and (min-width: 1200px) {
-    //     display: inline-block;
-    //     margin-left: 93px;
-    // }
+    @media screen and (max-width: 767px) {
+            width: 450px;
+            margin-left: 0;
+        }
+        
 }
 
 .sub__group {
-    display: flex;
+    display: block;
 
-    // @media screen and (max-width: 480px) {
-    //         display: block;
-    //     }
+    @media screen and (min-width: 768px) {
+        margin-left: 50px;
+        }
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        margin-left: 0px;
+    }
 
 }
 
 .sub__title {
     margin: 0;
+    margin-top: 50px;
     padding-top: 10px;
     padding-bottom: 20px;
     justify-content: center;
     flex-wrap: nowrap;
+    text-align: center;
 
     font-weight: 700;
     font-size: 14px;
@@ -48,19 +43,21 @@
 
     color: $white-color;
 
-    // @media screen and (min-width: 480px) {
-    //     margin-top: 60px;
-    //     }
+    @media screen and (min-width: 768px) {
+            margin-top: 0;
+        }
 
-    // @media screen and (min-width: 1200px) {
-        
-    //     }
+    @media screen and (min-width: 1200px) {
+        margin-top: 0;
+        text-align: start;
+    }
+
 }
 
 .sub__input {
     display: flex;
     align-items: center;
-    width: 358px;
+    
     height: 50px;
     padding-left: 16px;
 
@@ -76,6 +73,17 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
 
+    @media screen and (max-width: 767px) {
+            width: 450px;
+        }
+
+    @media screen and (min-width: 768px) {
+        width: 450px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 358px;
+    }
 }
 
 .sub__button {
@@ -83,8 +91,7 @@
     text-align: center;
     width: 200px;
     height: 50px;
-    margin-left: 10px;
-
+    
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -98,13 +105,25 @@
     border-radius: 4px;
     border: 1px solid transparent;
 
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 767px) {
             margin-top: 20px;
+            margin-left: 140px;
         }
+
+    @media screen and (min-width: 768px) {
+        margin-top: 20px;
+        margin-left: 140px;
+        }
+
+    @media screen and (min-width: 1200px) {
+        margin-top: 0;
+        margin-left: 10px;
+    }
 }
 
 .sub__send {
     display: flex;
     margin-left: 10px;
     fill: $white-color;
+
 }
