--- a/css/main.css
+++ b/css/main.css
@@ -1484,6 +1484,14 @@ ul {
       flex-wrap: wrap;
 }
 
+@media screen and (max-width: 767px) {
+  .card-set {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .card-set__elements {
   width: 370px;
   margin-right: 30px;
@@ -1500,12 +1508,13 @@ ul {
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.card-set__elements:nth-child(3n) {
-  margin-right: 0;
-}
-
-.card-set__elements:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+@media screen and (min-width: 1200px) {
+  .card-set__elements:nth-child(3n) {
+    margin-right: 0;
+  }
+  .card-set__elements:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 }
 
 .card-set__meta {
@@ -1574,25 +1583,57 @@ ul {
 }
 
 /* ------------------- PORTFOLIO BUTTONS --------------- */
-.buttons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 50px;
+@media screen and (max-width: 767px) {
+  .section--gallery {
+    width: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-left: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 30px;
+    margin-left: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .buttons {
+    margin-bottom: 50px;
+  }
 }
 
 .buttons__item {
   margin-left: 8px;
+  margin-bottom: 15px;
 }
 
-.buttons__item:first-child {
-  margin-left: 0;
+@media screen and (min-width: 768px) {
+  .buttons__item {
+    margin-bottom: 0px;
+  }
+  .buttons__item:first-child {
+    margin-left: 0;
+  }
 }
 
 .buttons__link {
