--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -1,6 +1,10 @@
 .card-set {
     display: flex;
     flex-wrap: wrap;
+    
+    @media screen and (max-width:767px) {
+    justify-content: center;
+        }
 }
 
 .card-set__elements {
@@ -12,21 +16,25 @@
 
     transition: box-shadow 250ms var(--timing-function);
 
-
-
     &:hover {
             box-shadow:
                 0px 1px 1px rgba(0, 0, 0, 0.12),
                 0px 4px 4px rgba(0, 0, 0, 0.06),
                 1px 4px 6px rgba(0, 0, 0, 0.16);
         }
-    &:nth-child(3n) {
-        margin-right: 0;
+    
+
+    @media screen and (min-width:1200px) {
+        &:nth-child(3n) {
+                margin-right: 0;
+            }
+
+        &:nth-last-child(-n + 3) {
+            margin-bottom: 0;
+        }
     }
 
-    &:nth-last-child(-n + 3) {
-        margin-bottom: 0;
-    }
+    
 }
 
 .card-set__meta {
