--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -47,18 +47,43 @@
 }
 
 /* ------------------- PORTFOLIO BUTTONS --------------- */
-.buttons {
-    @include centeredFlex (flex);
-    margin-bottom: 50px;
+.section--gallery {
+    @media screen and (max-width: 767px) {
+            width: 480px;
+        }
+}
 
+.buttons {
+    @media screen and (max-width: 767px) {
+            display: flex;
+            flex-wrap: wrap;
+            margin-left: 15px;
+        }
+    
+    @media screen and (min-width: 768px) {
+            @include centeredFlex (flex);
+                margin-bottom: 30px;
+                margin-left: 0;
+        }
+
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+    }
 }
 
 .buttons__item {
     margin-left: 8px;
+    margin-bottom: 15px;
 
-    &:first-child {
-            margin-left: 0;
-        }
+    
+
+    @media screen and (min-width: 768px) {
+        margin-bottom: 0px;  
+
+        &:first-child {
+                margin-left: 0;
+            }
+    }
 }
 
 .buttons__link {
