--- a/css/main.css
+++ b/css/main.css
@@ -14,19 +14,19 @@ body {
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    max-width: 480px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
-    width: 1200px;
+    max-width: 1200px;
   }
 }
 
@@ -123,6 +123,20 @@ ul {
           align-items: center;
 }
 
+@media screen and (max-width: 767px) {
+  .page-header {
+    width: 480px;
+    height: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .page-header {
+    width: 738px;
+    height: 80px;
+  }
+}
+
 .page-header__accent {
   color: #212121;
 }
@@ -155,6 +169,12 @@ ul {
   background-position: center;
 }
 
+@media screen and (min-width: 768px) {
+  .page-header__button {
+    display: none;
+  }
+}
+
 .button .button__cross {
   display: none;
 }
@@ -182,7 +202,7 @@ ul {
   text-decoration: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .page-header__logo {
     font-size: 24px;
     line-height: 1.17;
@@ -193,7 +213,18 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 93px;
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav {
+    margin-left: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .site-nav {
+    margin-left: 93px;
+  }
 }
 
 .site-nav__item {
@@ -243,18 +274,37 @@ ul {
 }
 
 .contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
+  display: block;
 }
 
-.contacts__item {
-  margin-left: 50px;
+@media screen and (min-width: 768px) {
+  .contacts {
+    margin-left: auto;
+  }
 }
 
-.contacts__item:first-child {
-  margin-left: 0px;
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__item {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts__item {
+    margin-left: 50px;
+    margin-bottom: 0;
+  }
+  .contacts__item:first-child {
+    margin-left: 0px;
+  }
 }
 
 .contacts__link {
@@ -290,21 +340,19 @@ ul {
 
 .hero {
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1199px) {
   .hero {
     padding-top: 118px;
     padding-bottom: 118px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 1200px) {
   .hero {
-    padding-top: 118px;
-    padding-bottom: 118px;
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
 
@@ -313,16 +361,16 @@ ul {
   margin-bottom: 30px;
   color: #FFFFFF;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 1200px) {
   .hero__title {
-    font-size: 26px;
-    line-height: 1.62;
+    font-size: 44px;
+    line-height: 1.36;
   }
 }
 
@@ -334,8 +382,6 @@ ul {
 }
 
 .overlay {
-  max-width: 1600px;
-  height: 600px;
   margin-left: auto;
   margin-right: auto;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/img.jpg");
@@ -349,6 +395,20 @@ ul {
   .overlay {
     width: 480px;
     height: 400px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .overlay {
+    width: 768px;
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .overlay {
+    max-width: 1600px;
+    height: 600px;
   }
 }
 
@@ -633,12 +693,6 @@ ul {
 
 .features {
   display: block;
-}
-
-@media screen and (min-width: 480px) {
-  .features {
-    width: 480px;
-  }
 }
 
 @media screen and (max-width: 767px) {
