--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,14 +1,30 @@
 .contacts {
-    display: flex;
-    margin-left: auto;
+    display: block;
+
+    @media screen and (min-width: 768px) {
+        margin-left: auto;
+        }
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        }
 }
 
 .contacts__item {
-    margin-left: 50px;
 
-    &:first-child {
-            margin-left: 0px;
+    @media screen and (min-width: 768px) {
+            margin-bottom: 10px;
         }
+
+    @media screen and (min-width: 1200px) {
+        margin-left: 50px;
+        margin-bottom: 0;
+        
+            &:first-child {
+                margin-left: 0px;
+            }
+        }
+    
 }
 
 .contacts__link {
