--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -8,7 +8,7 @@
     letter-spacing: 0.03em;
     text-decoration: none;
 
-    @media screen and (max-width: 480px) {
+    @media screen and (min-width: 480px) and (max-width:1199px) {
             font-size: 24px;
             line-height: 1.17;
         }
