--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,12 +1,30 @@
 .main {
     position: relative;
-
-    border-bottom: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC; 
+    
+    // @media screen and (max-width: 480px) {
+    //         width: 480px;
+    //     }
+    
+    //     @media screen and (min-width: 480px) and (max-width: 1199px) {
+    //         width: 768px;
+    //     }
+    
 }
 
 .page-header {
     display: flex;
     align-items: center;
+
+    @media screen and (max-width:767px) {
+            width: 480px;
+            height: 60px;
+        }
+    
+        @media screen and (min-width:768px) and (max-width:1199px) {
+            width: 738px;
+            height: 80px;
+        }
 }
 
 .page-header__accent {
@@ -40,6 +58,10 @@
     border: none;
     background-color: transparent;
     background-position: center;
+
+    @media screen and (min-width: 768px) {
+        display: none;
+        }
 }
 
 .button {
