--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -1,6 +1,13 @@
 .site-nav {
     display: flex;
+    
+    @media screen and (min-width:768px) {
+            margin-left: 88px;
+        }
+
+    @media screen and (min-width:1200px) {
     margin-left: 93px;
+    }
 }
 
 .site-nav__item {
