--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,10 @@ body {
   letter-spacing: 0.03em;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 .container {
   padding-left: 15px;
   padding-right: 15px;
@@ -137,25 +141,54 @@ ul {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .page-header {
+    width: 1170px;
+    height: 80px;
+  }
+}
+
 .page-header__accent {
   color: #212121;
 }
 
 .page-header__menu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  height: 796px;
   text-align: center;
-  background-color: #FFFFFF;
-  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
 }
 
-.page-header__menu.is-open {
-  display: block;
+@media screen and (max-width: 767px) {
+  .page-header__menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 796px;
+    background-color: #FFFFFF;
+    -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  }
+  .page-header__menu.is-open {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .page-header__menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 80px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .page-header__menu {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .page-header__button {
@@ -163,6 +196,7 @@ ul {
   display: -ms-inline-flexbox;
   display: inline-flex;
   margin: 0;
+  margin-left: 276px;
   padding: 0;
   border: none;
   background-color: transparent;
@@ -275,11 +309,17 @@ ul {
 
 .contacts {
   display: block;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts {
-    margin-left: auto;
+    margin-top: 21px;
+    margin-bottom: 21px;
+    margin-right: 15px;
+    margin-left: 21px;
   }
 }
 
@@ -288,19 +328,24 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-left: auto;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts__item {
     margin-bottom: 10px;
+    margin-left: 50px;
+  }
+  .contacts__item:last-child {
+    margin-bottom: 0px;
+    margin-left: 40px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .contacts__item {
     margin-left: 50px;
-    margin-bottom: 0;
   }
   .contacts__item:first-child {
     margin-left: 0px;
@@ -382,6 +427,8 @@ ul {
 }
 
 .overlay {
+  max-width: 1600px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/img.jpg");
@@ -391,23 +438,8 @@ ul {
   background-position: center;
 }
 
-@media screen and (max-width: 480px) {
-  .overlay {
-    width: 480px;
-    height: 400px;
-  }
-}
-
-@media screen and (min-width: 480px) and (max-width: 1199px) {
-  .overlay {
-    width: 768px;
-    height: 400px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .overlay {
-    max-width: 1600px;
     height: 600px;
   }
 }
@@ -422,6 +454,13 @@ ul {
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: scroll;
+}
+
+@media screen and (min-width: 1200px) {
+  .backdrop {
+    overflow-y: none;
+  }
 }
 
 .backdrop.is-hidden {
@@ -439,8 +478,8 @@ ul {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   padding: 40px;
   background-color: #FFFFFF;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -454,6 +493,13 @@ ul {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
+
 .modal__form {
   max-width: 528px;
 }
@@ -464,10 +510,17 @@ ul {
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.50;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    font-size: 20px;
+    line-height: 1.15;
+  }
 }
 
 .modal__field {
@@ -481,9 +534,15 @@ ul {
 }
 
 .modal-user {
-  width: 448px;
+  width: 370px;
   height: 58px;
   margin-bottom: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-user {
+    width: 448px;
+  }
 }
 
 .user {
@@ -545,8 +604,8 @@ ul {
 .user__texterea::-webkit-input-placeholder {
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
@@ -554,8 +613,8 @@ ul {
 .user__texterea:-ms-input-placeholder {
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
@@ -563,8 +622,8 @@ ul {
 .user__texterea::-ms-input-placeholder {
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
@@ -572,10 +631,29 @@ ul {
 .user__texterea::placeholder {
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
+}
+
+@media screen and (min-width: 1200px) {
+  .user__texterea::-webkit-input-placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+  .user__texterea:-ms-input-placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+  .user__texterea::-ms-input-placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+  .user__texterea::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+  }
 }
 
 .checkbox {
@@ -589,12 +667,18 @@ ul {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
-  padding-left: 9px;
   padding-top: 4px;
   margin: 0;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .checkbox {
+    font-size: 14px;
+    line-height: 1.16;
+  }
 }
 
 .checkbox__input {
