--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,24 +1,34 @@
 .contacts {
     display: block;
+    align-items: center;
 
-    @media screen and (min-width: 768px) {
-        margin-left: auto;
+    @media screen and (min-width: 768px) and (max-width:1199px) {
+        margin-top: 21px;
+        margin-bottom: 21px;
+        margin-right: 15px;
+        margin-left: 21px;
         }
 
     @media screen and (min-width: 1200px) {
         display: flex;
+        margin-left: auto;
         }
 }
 
 .contacts__item {
-
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width:1199px) {
             margin-bottom: 10px;
+            margin-left: 50px;
+
+            &:last-child {
+                margin-bottom: 0px;
+                margin-left: 40px;
+                }
+
         }
 
     @media screen and (min-width: 1200px) {
         margin-left: 50px;
-        margin-bottom: 0;
         
             &:first-child {
                 margin-left: 0px;
@@ -49,4 +59,6 @@
     align-items: center;
     margin-right: 10px;
     fill: currentColor;
+
+    @media screen and (min-width: 1200px) {}
 }
