--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,14 +2,6 @@
     position: relative;
     border-bottom: 1px solid #ECECEC; 
     
-    // @media screen and (max-width: 480px) {
-    //         width: 480px;
-    //     }
-    
-    //     @media screen and (min-width: 480px) and (max-width: 1199px) {
-    //         width: 768px;
-    //     }
-    
 }
 
 .page-header {
@@ -21,32 +13,50 @@
             height: 60px;
         }
     
-        @media screen and (min-width:768px) and (max-width:1199px) {
+    @media screen and (min-width:768px) and (max-width:1199px) {
             width: 738px;
             height: 80px;
         }
+
+    @media screen and (min-width:1200px) {
+        width: 1170px;
+        height: 80px;
+    }
 }
 
 .page-header__accent {
     color: $title-text-color;
 }
+
 .page-header__menu {
-    display: none;
-
-    position: absolute;
-
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 796px;
     text-align: center;
-    background-color: $primary-bgc-color;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 
-    0px 2px 4px rgba(0, 0, 0, 0.08), 
-    0px 1px 3px rgba(0, 0, 0, 0.16);
+    
+    @media screen and (max-width:767px) {
+        display: none; 
+        position: absolute;
+        
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 796px;
+        background-color: $primary-bgc-color;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04),
+                0px 2px 4px rgba(0, 0, 0, 0.08),
+                0px 1px 3px rgba(0, 0, 0, 0.16);
 
-    &.is-open {
-        display: block;
+        &.is-open {
+                display: block;
+            }
+    }
+
+    @media screen and (min-width:768px) {
+        display: flex;
+        height: 80px;
+    }
+
+    @media screen and (min-width:1200px) {
+        width: 100%;
+        display: flex;
     }
 }
 .page-header__button {
@@ -54,6 +64,7 @@
     // height: 40px;
     display: inline-flex;
     margin: 0;
+    margin-left: 276px;
     padding: 0;
     border: none;
     background-color: transparent;
