--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -14,6 +14,10 @@ body {
     font-family: Roboto, sans-serif;
     letter-spacing: 0.03em;
 
+    &.modal-open {
+        overflow: hidden;
+    }
+
 }
 
 .container {
