--- a/css/main.css
+++ b/css/main.css
@@ -16,9 +16,9 @@ body.modal-open {
   margin-right: auto;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .container {
-    max-width: 480px;
+    width: 480px;
   }
 }
 
@@ -118,6 +118,12 @@ ul {
   border-bottom: 1px solid #ECECEC;
 }
 
+@media screen and (max-width: 767px) {
+  .main {
+    min-width: 480px;
+  }
+}
+
 .page-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -125,25 +131,18 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-@media screen and (max-width: 767px) {
-  .page-header {
-    width: 480px;
-    height: 60px;
-  }
+  height: 60px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .page-header {
-    width: 738px;
     height: 80px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .page-header {
-    width: 1170px;
+    width: 1200px;
     height: 80px;
   }
 }
@@ -196,7 +195,7 @@ ul {
   display: -ms-inline-flexbox;
   display: inline-flex;
   margin: 0;
-  margin-left: 276px;
+  margin-left: auto;
   padding: 0;
   border: none;
   background-color: transparent;
@@ -249,6 +248,15 @@ ul {
   display: flex;
 }
 
+@media screen and (max-width: 767px) {
+  .site-nav {
+    display: block;
+    text-align: start;
+    margin-left: 40px;
+    margin-bottom: 302px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .site-nav {
     margin-left: 88px;
@@ -261,8 +269,10 @@ ul {
   }
 }
 
-.site-nav__item {
-  margin-left: 50px;
+@media screen and (min-width: 768px) {
+  .site-nav__item {
+    margin-left: 50px;
+  }
 }
 
 .site-nav__item:first-child {
@@ -287,6 +297,13 @@ ul {
   color: #2196F3;
 }
 
+@media screen and (max-width: 767px) {
+  .site-nav__link {
+    font-size: 40px;
+    line-height: 1.17;
+  }
+}
+
 .site-nav__link--active {
   position: relative;
   font-weight: 500;
@@ -295,6 +312,13 @@ ul {
   letter-spacing: 0.02em;
   text-decoration: none;
   color: #2196F3;
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav__link--active {
+    font-size: 40px;
+    line-height: 1.17;
+  }
 }
 
 .site-nav__link--active::before {
@@ -307,11 +331,34 @@ ul {
   background-color: #2196F3;
 }
 
+@media screen and (max-width: 767px) {
+  .site-nav__link--active::before {
+    display: none;
+  }
+}
+
 .contacts {
   display: block;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (max-width: 767px) {
+  .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -ms-flex-line-pack: start;
+        align-content: flex-start;
+    margin-left: 40px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -329,6 +376,12 @@ ul {
     display: -ms-flexbox;
     display: flex;
     margin-left: auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts__item {
+    margin-bottom: 32px;
   }
 }
 
@@ -372,6 +425,13 @@ ul {
   color: #2196F3;
 }
 
+@media screen and (max-width: 767px) {
+  .contacts__link {
+    font-size: 24px;
+    line-height: 1.17;
+  }
+}
+
 .contacts__icon {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -381,6 +441,12 @@ ul {
           align-items: center;
   margin-right: 10px;
   fill: currentColor;
+}
+
+@media screen and (max-width: 767px) {
+  .contacts__icon {
+    display: none;
+  }
 }
 
 .hero {
@@ -436,6 +502,12 @@ ul {
   background-color: #C4C4C4;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+@media screen and (max-width: 767px) {
+  .overlay {
+    min-width: 480px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -769,12 +841,6 @@ ul {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 767px) {
-  .section--features {
-    width: 480px;
-  }
-}
-
 .features {
   display: block;
 }
@@ -961,7 +1027,7 @@ ul {
 
 @media screen and (max-width: 767px) {
   .section--command {
-    width: 480px;
+    min-width: 480px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -970,18 +1036,6 @@ ul {
 
 .command {
   display: block;
-}
-
-@media screen and (min-width: 480px) {
-  .command {
-    width: 450px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .command {
-    width: 450px;
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -997,7 +1051,6 @@ ul {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    width: 768px;
   }
 }
 
@@ -1113,12 +1166,6 @@ ul {
 .command-social__link:hover, .command-social__link:focus {
   fill: #ffffff;
   background-color: #2196F3;
-}
-
-@media screen and (max-width: 767px) {
-  .section--clients {
-    width: 480px;
-  }
 }
 
 .clients {
@@ -1283,7 +1330,7 @@ ul {
 
 @media screen and (max-width: 767px) {
   .footer {
-    width: 480px;
+    min-width: 480px;
     height: 603px;
   }
 }
