--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,7 +1,7 @@
 .section--clients {
-    @media screen and (max-width: 767px) {
-        width: 480px;
-    }
+    // @media screen and (max-width: 767px) {
+    //     width: 480px;
+    // }
 }
 
 .clients {
