--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -2,6 +2,14 @@
     display: block;
     align-items: center;
 
+    @media screen and (max-width: 767px) {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+        align-content: flex-start;
+        margin-left: 40px;
+    }
+
     @media screen and (min-width: 768px) and (max-width:1199px) {
         margin-top: 21px;
         margin-bottom: 21px;
@@ -16,6 +24,10 @@
 }
 
 .contacts__item {
+    @media screen and (max-width: 767px) {
+        margin-bottom: 32px;
+    }
+
     @media screen and (min-width: 768px) and (max-width:1199px) {
             margin-bottom: 10px;
             margin-left: 50px;
@@ -52,6 +64,11 @@
         display: flex;
         color: $accent-color;
     } 
+
+    @media screen and (max-width: 767px) {
+        font-size: 24px;
+        line-height: 1.17;
+    }
 }
 
 .contacts__icon {
@@ -60,5 +77,7 @@
     margin-right: 10px;
     fill: currentColor;
 
-    @media screen and (min-width: 1200px) {}
+    @media screen and (max-width: 767px) {
+        display: none;
+        }
 }
