--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -23,7 +23,7 @@
     background-color: $hero-bgc-color;
 
     @media screen and (max-width: 767px) {
-        width: 480px;
+        min-width: 480px;
         height: 603px;
         }
 
@@ -34,7 +34,7 @@
 
    @media screen and (min-width: 1200px) {
     //    width: 1600px;
-       height: 252px;
+          height: 252px;
    }
 
 }
