--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -51,6 +51,10 @@
     background-repeat: no-repeat;
     background-position: center;
 
+    @media screen and (max-width: 767px) {
+       min-width: 480px;
+    }
+
     @media screen and (min-width: 1200px) {
         height: 600px;
     }
