--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -1,17 +1,26 @@
 .site-nav {
     display: flex;
+
+    @media screen and (max-width:767px) {
+        display: block;
+        text-align: start;
+        margin-left: 40px;
+        margin-bottom: 302px;
+        }
     
     @media screen and (min-width:768px) {
-            margin-left: 88px;
+        margin-left: 88px;
         }
 
     @media screen and (min-width:1200px) {
-    margin-left: 93px;
+        margin-left: 93px;
     }
 }
 
 .site-nav__item {
-    margin-left: 50px;
+    @media screen and (min-width:768px){
+        margin-left: 50px;
+    }   
 }
 
 .site-nav__item:first-child {
@@ -36,6 +45,11 @@
     &:hover, &:focus {
         color: $accent-color;
     }
+
+    @media screen and (max-width:767px) {
+        font-size: 40px;
+        line-height: 1.17;
+        }
 }
 
 .site-nav__link--active {
@@ -48,6 +62,11 @@
     text-decoration: none;
 
     color: $accent-color;
+
+    @media screen and (max-width:767px) {
+            font-size: 40px;
+            line-height: 1.17;
+        }
 }
 
 .site-nav__link--active::before {
@@ -60,4 +79,8 @@
     border-radius: 2px;
 
     background-color: $accent-color;
+
+    @media screen and (max-width:767px) {
+        display: none;
+        }
 }
