--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -2,8 +2,8 @@
     background-color: $secondary-bgc-color;
 
     @media screen and (max-width: 767px) {
-            width: 480px;
-            justify-content: center;
+        min-width: 480px;
+        justify-content: center;
         }
 
 }
@@ -11,20 +11,11 @@
 .command {
     display: block;
     
-        @media screen and (min-width: 480px) {
-            width: 450px;
-        }
-    
-        @media screen and (max-width: 767px) {
-            width: 450px;
-        }
-    
         @media screen and (min-width: 768px) {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             align-items: center;
-            width: 768px;
         }
     
         @media screen and (min-width: 1200px) {
