--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -21,14 +21,13 @@ body {
 }
 
 .container {
-    // width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 
-    @media screen and (min-width: 480px) {
-        max-width: 480px;
+    @media screen and (max-width: 767px) {
+        width: 480px;
         }
 
     @media screen and (min-width: 768px) {
