--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -3,7 +3,11 @@
     flex-wrap: wrap;
     
     @media screen and (max-width:767px) {
-    justify-content: center;
+        justify-content: center;
+        }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        margin: -15px;
         }
 }
 
@@ -21,6 +25,11 @@
                 0px 1px 1px rgba(0, 0, 0, 0.12),
                 0px 4px 4px rgba(0, 0, 0, 0.06),
                 1px 4px 6px rgba(0, 0, 0, 0.16);
+        }
+
+        @media screen and (min-width: 768px) and (max-width: 1199px) {
+            width: calc((100% - 4 * 15px) / 2);
+            margin: 15px;
         }
     
 
