--- a/css/main.css
+++ b/css/main.css
@@ -10,13 +10,14 @@ body.modal-open {
 }
 
 .container {
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
@@ -24,13 +25,13 @@ body.modal-open {
 
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 768px;
+    width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
-    max-width: 1200px;
+    width: 1200px;
   }
 }
 
@@ -40,6 +41,17 @@ ul {
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
 }
 
 .hero__button, .modal__button {
@@ -68,20 +80,8 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-@media screen and (max-width: 767px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -97,7 +97,8 @@ ul {
   color: #212121;
   font-weight: 700;
   font-size: 28px;
-  line-height: 1.17;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
@@ -116,12 +117,6 @@ ul {
 .main {
   position: relative;
   border-bottom: 1px solid #ECECEC;
-}
-
-@media screen and (max-width: 767px) {
-  .main {
-    min-width: 480px;
-  }
 }
 
 .page-header {
@@ -451,13 +446,8 @@ ul {
 
 .hero {
   text-align: center;
-}
-
-@media screen and (max-width: 1199px) {
-  .hero {
-    padding-top: 118px;
-    padding-bottom: 118px;
-  }
+  padding-top: 118px;
+  padding-bottom: 118px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -502,12 +492,6 @@ ul {
   background-color: #C4C4C4;
   background-repeat: no-repeat;
   background-position: center;
-}
-
-@media screen and (max-width: 767px) {
-  .overlay {
-    min-width: 480px;
-  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -842,68 +826,28 @@ ul {
 }
 
 .features {
-  display: block;
-}
-
-@media screen and (max-width: 767px) {
-  .features {
-    width: 480px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .features {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    width: 768px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .features {
-    width: 1200px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 
 .features__item {
+  width: 100%;
   border-radius: 4px;
-}
-
-@media screen and (max-width: 767px) {
-  .features__item {
-    width: 450px;
-    margin-bottom: 30px;
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-  .features__item:last-child {
-    margin-bottom: 0;
-  }
 }
 
 @media screen and (min-width: 768px) {
   .features__item {
-    width: 354px;
-    margin: 15px;
-  }
-  .features__item:nth-last-child(-n+2) {
-    margin-bottom: 0;
+    width: calc((100% - 30px) / 2);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .features__item {
-    width: 270px;
-    padding-bottom: 0;
-  }
-  .features__item:nth-last-child(-n+2) {
-    margin-bottom: 15px;
+    width: calc((100% - 90px) / 4);
   }
 }
 
@@ -915,11 +859,12 @@ ul {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  text-align: center;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .features__name {
-    text-align: center;
+    text-align: start;
   }
 }
 
@@ -944,24 +889,6 @@ ul {
   border-radius: 4px;
   margin-bottom: 30px;
   background-color: #F5F4FA;
-}
-
-@media screen and (min-width: 480px) {
-  .features__icon {
-    width: 450px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .features__icon {
-    width: 354px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .features__icon {
-    width: 270px;
-  }
 }
 
 .section--examples {
@@ -1025,41 +952,23 @@ ul {
   background-color: #F5F4FA;
 }
 
-@media screen and (max-width: 767px) {
-  .section--command {
-    min-width: 480px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-
 .command {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .command {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .command {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 1200px;
   }
 }
 
@@ -1070,36 +979,18 @@ ul {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
-}
-
-@media screen and (max-width: 767px) {
-  .command__item {
-    margin-bottom: 30px;
-  }
-  .command__item:last-child {
-    margin-bottom: 0;
-  }
+  width: 100%;
 }
 
 @media screen and (min-width: 768px) {
   .command__item {
-    margin-bottom: 30px;
-    margin: 15px;
-  }
-  .command__item:nth-last-child(-n+2) {
-    margin-bottom: 0;
+    width: calc((100% - 30px) / 2);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .command__item {
-    margin-left: 30px;
-    margin-right: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-  .command__item:first-child {
-    margin-left: 0;
+    width: calc((100% - 90px) / 4);
   }
 }
 
@@ -1172,41 +1063,15 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-@media screen and (max-width: 767px) {
-  .clients {
-    width: 480px;
-    margin: -15px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .clients {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin: -15px;
-  }
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
 }
 
 .clients__item {
@@ -1215,34 +1080,18 @@ ul {
   display: flex;
   cursor: pointer;
   fill: #AFB1B8;
+  width: calc((100% - 30px) / 2);
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .clients__item {
-    width: calc((100% - 4 * 15px) / 2);
-    margin: 15px;
-  }
-  .clients__item:nth-last-child(-n+2) {
-    margin-bottom: 0;
-  }
-  .clients__item:nth-child(-n+2) {
-    margin-top: 0;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .clients__item {
-    width: calc((100% - 6 * 15px) / 3);
-    margin: 15px;
+    width: calc((100% - 60px) / 3);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .clients__item {
-    margin-left: 30px;
-  }
-  .clients__item:first-child {
-    margin-left: 0;
+    width: calc((100% - 150px) / 6);
   }
 }
 
@@ -1292,20 +1141,14 @@ ul {
 }
 
 .container--footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-@media screen and (max-width: 767px) {
-  .container--footer {
-    display: block;
-  }
+  display: block;
 }
 
 @media screen and (min-width: 768px) {
   .container--footer {
-    width: 768px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
@@ -1313,7 +1156,6 @@ ul {
 
 @media screen and (min-width: 1200px) {
   .container--footer {
-    min-width: 1200px;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
   }
@@ -1328,53 +1170,21 @@ ul {
   background-color: #2F303A;
 }
 
-@media screen and (max-width: 767px) {
-  .footer {
-    min-width: 480px;
-    height: 603px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .footer {
-    min-width: 768px;
-    height: 463px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer {
-    height: 252px;
-  }
-}
-
 .footer__contacts {
   display: block;
-}
-
-@media screen and (max-width: 767px) {
-  .footer__contacts {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    text-align: center;
-  }
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
   .footer__contacts {
     width: 232px;
     margin-left: 76px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    text-align: center;
   }
 }
 
@@ -1403,21 +1213,28 @@ ul {
   display: block;
 }
 
-@media screen and (max-width: 767px) {
-  .footer__nav {
-    margin-left: 155px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .footer__nav {
-    margin-left: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .footer__nav {
-    margin-left: 0;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 }
 
@@ -1425,6 +1242,9 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
   font-size: 14px;
@@ -1445,28 +1265,32 @@ ul {
 }
 
 .social {
-  display: inline-block;
-  width: 206px;
-  height: 80px;
-}
-
-@media screen and (max-width: 767px) {
-  .social {
-    width: 450px;
-    margin-left: 0;
-    margin-top: 60px;
-  }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  margin-top: 60px;
 }
 
 @media screen and (min-width: 768px) {
   .social {
+    margin-top: 0;
     margin-left: 165px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .social {
-    margin-left: 70px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 }
 
@@ -1557,35 +1381,65 @@ ul {
 }
 
 .sub {
-  display: inline-block;
-  margin-left: 93px;
-  width: 570px;
-  height: 86px;
-}
-
-@media screen and (max-width: 767px) {
-  .sub {
-    width: 450px;
-    margin-left: 0;
-  }
-}
-
-.sub__group {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  margin-top: 60px;
 }
 
 @media screen and (min-width: 768px) {
-  .sub__group {
-    margin-left: 50px;
+  .sub {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 166px;
   }
 }
 
 @media screen and (min-width: 1200px) {
+  .sub {
+    display: inline-block;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    margin-left: 93px;
+    margin-top: 0;
+  }
+}
+
+.sub__group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
   .sub__group {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-left: 0px;
+    margin-left: 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
@@ -1643,13 +1497,7 @@ ul {
   border-radius: 4px;
 }
 
-@media screen and (max-width: 767px) {
-  .sub__input {
-    width: 450px;
-  }
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
   .sub__input {
     width: 450px;
   }
@@ -1674,6 +1522,7 @@ ul {
   text-align: center;
   width: 200px;
   height: 50px;
+  margin-top: 20px;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -1688,17 +1537,9 @@ ul {
   border: 1px solid transparent;
 }
 
-@media screen and (max-width: 767px) {
-  .sub__button {
-    margin-top: 20px;
-    margin-left: 140px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .sub__button {
     margin-top: 20px;
-    margin-left: 140px;
   }
 }
 
@@ -1723,26 +1564,11 @@ ul {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-}
-
-@media screen and (max-width: 767px) {
-  .card-set {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .card-set {
-    margin: -15px;
-  }
+  gap: 30px;
 }
 
 .card-set__elements {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  width: 100%;
   border: 1px solid #EEEEEE;
   -webkit-transition: -webkit-box-shadow 250ms var(--timing-function);
   transition: -webkit-box-shadow 250ms var(--timing-function);
@@ -1755,19 +1581,15 @@ ul {
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .card-set__elements {
-    width: calc((100% - 4 * 15px) / 2);
-    margin: 15px;
+    width: calc((100% - 30px) / 2);
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .card-set__elements:nth-child(3n) {
-    margin-right: 0;
-  }
-  .card-set__elements:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+  .card-set__elements {
+    width: calc((100% - 60px) / 3);
   }
 }
 
@@ -1843,15 +1665,12 @@ ul {
   }
 }
 
-@media screen and (max-width: 767px) {
-  .buttons {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-left: 15px;
-  }
+.buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @media screen and (min-width: 768px) {
