--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -1,20 +1,11 @@
 .card-set {
     display: flex;
     flex-wrap: wrap;
-    
-    @media screen and (max-width:767px) {
-        justify-content: center;
-        }
-
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-        margin: -15px;
-        }
+    gap: 30px;
 }
 
 .card-set__elements {
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
+    width: 100%;
 
     border: 1px solid #EEEEEE;
 
@@ -26,25 +17,16 @@
                 0px 4px 4px rgba(0, 0, 0, 0.06),
                 1px 4px 6px rgba(0, 0, 0, 0.16);
         }
-
-        @media screen and (min-width: 768px) and (max-width: 1199px) {
-            width: calc((100% - 4 * 15px) / 2);
-            margin: 15px;
-        }
-    
-
-    @media screen and (min-width:1200px) {
-        &:nth-child(3n) {
-                margin-right: 0;
-            }
-
-        &:nth-last-child(-n + 3) {
-            margin-bottom: 0;
-        }
+   
+    @media screen and (min-width: 768px) {
+        width: calc((100% - 30px) / 2);
+    }
+        
+    @media screen and (min-width: 1200px) {
+        width: calc((100% - 60px) / 3);
     }
 
-    
-}
+    }
 
 .card-set__meta {
     padding: 20px 24px;
