--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,28 +1,30 @@
 .section--clients {
-    // @media screen and (max-width: 767px) {
-    //     width: 480px;
-    // }
+    
 }
 
 .clients {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
 
-    @media screen and (max-width: 767px) {
-        width: 480px;
-        margin: -15px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        }
+    // @media screen and (max-width: 767px) {
+    //     width: 480px;
+    //     margin: -15px;
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     justify-content: center;
+    //     align-items: center;
+    //     }
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        margin: -15px;
-    }
+    // @media screen and (min-width: 768px) and (max-width: 1199px) {
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     justify-content: center;
+    //     align-items: center;
+    //     margin: -15px;
+    // }
         
 }
 
@@ -30,37 +32,15 @@
     display: flex;
     cursor: pointer;
     fill: #AFB1B8;
-    // margin-left: 30px;
+    width: calc((100% - 30px) / 2);
 
-    // &:first-child {
-    //         margin-left: 0;
-    //     }
-
-    @media screen and (max-width: 767px) {
-        width: calc((100% - 4 * 15px) / 2);
-        margin: 15px;
-
-        &:nth-last-child(-n+2) {
-                margin-bottom: 0;
-            }
-
-        &:nth-child(-n+2) {
-            margin-top: 0;
+    @media screen and (min-width: 768px) {
+            width: calc((100% - 60px) / 3);
         }
-    }
-
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-        width: calc((100% - 6 * 15px) / 3);
-        margin: 15px;
-        }
-
+    
     @media screen and (min-width: 1200px) {
-        margin-left: 30px;
-
-        &:first-child {
-            margin-left: 0;
-         }
-        }   
+            width: calc((100% - 150px) / 6);
+        }
     }    
 
 
