--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,59 +1,39 @@
 .features {
-    display: block;
+    // display: block;
 
-        @include mobile {
-            width: 480px;
-        }
+    // @media screen and (min-width: 480px) {
+    //         width: 480px;
+    //     }
     
-        @include tablet {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 30px;
-            width: 768px;
-        }
+    // @media screen and (min-width: 768px) {
+    //         display: flex;
+    //         flex-wrap: wrap;
+    //         gap: 30px;
+    //         width: 768px;
+    //     }
     
-        @include desktop {
-            width: 1200px;
-        }
+    // @media screen and (min-width: 1200px) {
+    //         width: 1200px;
+    //     }
+
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
 
 }
 
 .features__item {
-    // width: 270px;
-    // margin: 15px;
-    
+    width: 100%;
     border-radius: 4px;
-
-    @media screen and (max-width: 767px) {
-        width: 450px;
-
-        margin-bottom: 30px;
-        margin-left: 15px;
-        margin-right: 15px;
-
-        &:last-child {
-                margin-bottom: 0;
-            }
-    }
+    
 
     @media screen and (min-width: 768px) {
-        width: calc((100% - 30px) / 2);
-        // width: 354px;
-        // margin: 15px;
-
-        // &:nth-last-child(-n+2) {
-        //         margin-bottom: 0;
-        //     }
-    }
-
+            width: calc((100% - 30px) / 2);
+        }
+    
     @media screen and (min-width: 1200px) {
-        width: 270px;
-        padding-bottom: 0;
-
-        &:nth-last-child(-n+2) {
-                margin-bottom: 15px;
-            }
-    }
+            width: calc((100% - 90px) / 4);
+        } 
 }
 
 .features__name {
@@ -66,9 +46,10 @@
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    text-align: center;
 
-    @media screen and (max-width: 767px) {
-            text-align: center;
+    @media screen and (min-width: 768px) {
+            text-align: start;
         }
 }
 
@@ -83,21 +64,9 @@
 
 .features__icon {
     @include centeredFlex (flex);
-
-    // width: 270px;
     height: 120px;
     border-radius: 4px;
     margin-bottom: 30px;
 
     background-color: $secondary-bgc-color;
-
-    @media screen and (min-width: 480px) {
-            width: 450px;
-        }
-    @media screen and (min-width: 768px) {
-            width: 354px;
-        }
-    @media screen and (min-width: 1200px) {
-            width: 270px;
-        }
 }
