--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -17,7 +17,7 @@
             height: 80px;
         }
 
-    @include desktop {
+    @media screen and (min-width: 1200px) {
         width: 1200px;
         height: 80px;
     }
