--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -4,7 +4,7 @@
     padding-bottom: 60px;
 
     
-    @include desktop {
+    @media screen and (min-width: 1200px) {
         padding-top: 94px;
         padding-bottom: 94px;
     }
@@ -21,7 +21,7 @@
     letter-spacing: 0.03em;
     text-align: center;
         
-    @include desktop {
+    @media screen and (min-width: 1200px) {
         margin-bottom: 50px;
         
         font-size: 36px;
