--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -1,27 +1,35 @@
 .sub {
-    display: inline-block;
-    margin-left: 93px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 60px;
 
-    width: 570px;
-    height: 86px;
+        @media screen and (min-width: 768px) {
+            flex-direction: column;
+            margin-left: 166px;
 
-    @media screen and (max-width: 767px) {
-            width: 450px;
-            margin-left: 0;
         }
-        
+
+        @media screen and (min-width: 1200px) {
+            display: inline-block;
+            flex-wrap: nowrap;
+            margin-left: 93px;
+            margin-top: 0;
+        }
 }
 
 .sub__group {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-    @media screen and (min-width: 768px) {
-        margin-left: 50px;
-        }
 
     @media screen and (min-width: 1200px) {
-        display: flex;
-        margin-left: 0px;
+        margin-left: 0;
+        flex-direction: row;
     }
 
 }
@@ -73,13 +81,9 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
 
-    @media screen and (max-width: 767px) {
+    @media screen and (min-width: 480px) {
             width: 450px;
         }
-
-    @media screen and (min-width: 768px) {
-        width: 450px;
-    }
 
     @media screen and (min-width: 1200px) {
         width: 358px;
@@ -91,6 +95,7 @@
     text-align: center;
     width: 200px;
     height: 50px;
+    margin-top: 20px;
     
     font-style: normal;
     font-weight: 700;
@@ -105,14 +110,9 @@
     border-radius: 4px;
     border: 1px solid transparent;
 
-    @media screen and (max-width: 767px) {
-            margin-top: 20px;
-            margin-left: 140px;
-        }
 
     @media screen and (min-width: 768px) {
         margin-top: 20px;
-        margin-left: 140px;
         }
 
     @media screen and (min-width: 1200px) {
