--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,32 +1,20 @@
 .section--command {
     background-color: $secondary-bgc-color;
 
-    @media screen and (max-width: 767px) {
-        min-width: 480px;
-        justify-content: center;
-        }
-
 }
 
 .command {
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
     
         @media screen and (min-width: 768px) {
-            display: flex;
-            flex-wrap: wrap;
             justify-content: center;
             align-items: center;
-        }
-    
-        @media screen and (min-width: 1200px) {
-            display: flex;
-            width: 1200px;
         }
 }
 
 .command__item {
-    // margin-left: 30px;
-
     box-sizing: border-box;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -34,36 +22,15 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
     background-color: $white-color;
 
-    // &:first-child {
-    //         margin-left: 0;
-    //     }
+    width: 100%;
 
-    @media screen and (max-width: 767px) {
-        margin-bottom: 30px;
-
-        &:last-child {
-                margin-bottom: 0;
-            }
-        }
 
     @media screen and (min-width: 768px) {
-            margin-bottom: 30px;
-            margin: 15px;
-
-            &:nth-last-child(-n+2) {
-                    margin-bottom: 0;
-                }
+        width: calc((100% - 30px) / 2);
         }
 
     @media screen and (min-width: 1200px) { 
-        margin-left: 30px;
-        margin-right: 0;
-        margin-top: 0;
-        margin-bottom: 0;
-
-        &:first-child {
-                margin-left: 0;
-            }
+        width: calc((100% - 90px) / 4);
     }
 }
 
