--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -4,20 +4,20 @@
     justify-content: center;
 }
 
-@mixin mobile {
-    @media screen and (min-width: 480px) {
-        @content;
-    }
-}
+// @mixin mobile {
+//     @media screen and (min-width: 480px) {
+//         @content;
+//     }
+// }
 
-@mixin tablet {
-    @media screen and (min-width: 768px) {
-        @content;
-    }
-}
+// @mixin tablet {
+//     @media screen and (min-width: 768px) {
+//         @content;
+//     }
+// }
 
-@mixin desktop {
-    @media screen and (min-width: 1200px) {
-        @content;
-    }
-}
+// @mixin desktop {
+//     @media screen and (min-width: 1200px) {
+//         @content;
+//     }
+// }
