--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -27,16 +27,17 @@ body {
     margin-left: auto;
     margin-right: auto;
 
-    @include mobile {
-        width: 450px;
+    @media screen and (min-width: 480px) {
+        width: 480px;
+   
     }
-
-    @include tablet {
-        width: 768px;
-    }
-
-    @include desktop {
-        width: 1200px;
+    
+    @media screen and (min-width: 768px) {
+            width: 768px;
+        }
+    
+    @media screen and (min-width: 1200px) {
+            width: 1200px;
         }
 }
 
@@ -46,6 +47,10 @@ ul {
     padding: 0;
     margin: 0;
     list-style: none;
+}
+
+button {
+    cursor: pointer;
 }
 
 img {
