--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,13 +1,15 @@
 .contacts {
     display: block;
     align-items: center;
+    
 
     @media screen and (max-width: 767px) {
         display: flex;
         flex-wrap: wrap;
         flex-direction: column-reverse;
         align-content: flex-start;
-        margin-left: 40px;
+        align-items: flex-start;
+        margin-top: 270px;
     }
 
     @media screen and (min-width: 768px) and (max-width:1199px) {
@@ -25,7 +27,7 @@
 
 .contacts__item {
     @media screen and (max-width: 767px) {
-        margin-bottom: 32px;
+        margin-top: 32px;
     }
 
     @media screen and (min-width: 768px) and (max-width:1199px) {
@@ -69,6 +71,18 @@
         font-size: 24px;
         line-height: 1.17;
     }
+}
+
+.contacts__link--tel {
+    @media screen and (max-width: 767px) {
+        font-weight: 500;
+        font-size: 34px;
+        line-height: 1.18;
+        letter-spacing: 0.02em;
+        
+        color: $accent-color;
+    }
+
 }
 
 .contacts__icon {
