--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -4,8 +4,6 @@
     @media screen and (max-width:767px) {
         display: block;
         text-align: start;
-        margin-left: 40px;
-        margin-bottom: 302px;
         }
     
     @media screen and (min-width:768px) {
@@ -28,6 +26,10 @@
 }
 
 .site-nav__link {
+  @media screen and (max-width:767px) {
+    padding-bottom: 0px;
+  }
+
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
