--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './components/logo';
 @import './components/site-nav';
 @import './components/contacts';
+@import './components/soc';
 @import './components/hero';
 @import './components/modal';
 @import './components/features';
