--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -12,12 +12,16 @@
         flex-direction: column;
         justify-content: flex-start;
         }
+    
+    @media screen and (min-width: 1200px) {
+        margin-left: 70px;
+        align-items: flex-start;
+        }    
 
 }
 
 .social__title {
     margin: 0;
-    padding-top: 10px;
     padding-bottom: 20px;
     justify-content: center;
 
@@ -30,9 +34,10 @@
 
     color: $white-color;
 
-    @media screen and (min-width: 1200px) {
-        text-align: start;
-    }
+    // @media screen and (min-width: 1200px) {
+    //     align-items: flex-start;
+    // text-align: start;
+    // }
 }
 
 .social__list {
